--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -1,3 +1,25 @@
-<p>
-  login works!
-</p>
+
+  <form class="form-signin">
+    <div class="text-center mb-4">
+      <h1 class="h3 mb-3 font-weight-normal">Floating labels</h1>
+      <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a href="https://caniuse.com/#feat=css-placeholder-shown">Works in latest Chrome, Safari, and Firefox.</a></p>
+    </div>
+  
+    <div class="form-label-group">
+      <input [(ngModel)]="username" type="text" name="username" id="username" class="form-control" placeholder="Username" required autofocus>
+      <label for="username">username</label>
+    </div>
+  
+    <div class="form-label-group">
+      <input [(ngModel)]="password" name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <label for="inputPassword">Password</label>
+    </div>
+  
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+    <button (click)="login()" class="btn btn-lg btn-primary btn-block" type="button">Sign in</button>
+    <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
+  </form>
