--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,9 +15,14 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline mt-2 mt-md-0">
+
+    <form *ngIf="!auth.isLogin()" class="form-inline mt-2 mt-md-0">
       <a routerLink='/login' class="btn btn-outline-success my-2 my-sm-0" type="button">Login</a>
       <a routerLink='/register' class="btn btn-outline-success my-2 my-sm-0" type="button">Register</a>
+    </form>
+
+    <form *ngIf="auth.isLogin()" class="form-inline mt-2 mt-md-0">
+      <button (click)="logout()" class="btn btn-outline-success my-2 my-sm-0" type="button">Logout</button>
     </form>
   </div>
 </nav>
