tambah table pengajuan

--- a/src/app/gadai/pengajuan/pengajuan.component.html
+++ b/src/app/gadai/pengajuan/pengajuan.component.html
@@ -6,7 +6,7 @@
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button (click)="lanjutkanPengajuan()" class="btn btn-default">Lanjutkan</button>
+      <button (click)="tambahPengajuan()" class="btn btn-default">Tambah Pengajuan</button>
     </div>
   </div>
 </form>
